Use Java values for broadcast events in JNI.
Avoid using hard-coded constatns and don't define the same values
in Java and in C as they will get out of sync sooner or later.

Use switch and enum instead of if-else for handling events.
This way a missing event handler is reported as a compilation warning.

refs #SWANDROID-1758

Change-Id: I3dc5e0543ba8fa649191cdda4793d15c2cab22c1
Signed-off-by: Tomek Bury <tomek@broadcom.com>